<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">DeLorean Speedometer</string>
	<string name="pref_title">Speedometer Settings</string>

	<string name="pref_use_mph_title">Use MPH</string>
	<string name="pref_use_mph_summary_on">Use miles per hour (mph) as the speed unit.</string>
	<string name="pref_use_mph_summary_off">Use kilometers per hour (km/h) as the speed unit.</string>
	<string name="pref_sounds_title">Enable sound effects</string>
	<string name="pref_sounds_summary_on">Play the DeLorean start/stop and time travel sound effects.</string>
	<string name="pref_sounds_summary_off">Do not play sound effects.</string>
	<string name="pref_debug_title">Debug mode</string>
	<string name="pref_debug_summary">Displays a fake speed. Useful for testing.</string>
	<string name="pref_speed_increment_title">Progressive speed display</string>
	<string name="pref_speed_increment_summary_on">Increments the speedometer just like in the movie, unit by unit. Causes a slight lag in the display.</string>
	<string name="pref_speed_increment_summary_off">Increments the speedometer at every update. More accurate, but a bit less fancy.</string>

	<string name="pref_cat_units">Units</string>
	<string name="pref_cat_bonus">Bonus</string>
	<string name="pref_cat_other">Other</string>
</resources>
