<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/pref_cat_units">
		<SwitchPreference
			android:defaultValue="true"
			android:key="pref_use_mph"
			android:summaryOff="@string/pref_use_mph_summary_off"
			android:summaryOn="@string/pref_use_mph_summary_on"
			android:title="@string/pref_use_mph_title" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/pref_cat_bonus">
		<SwitchPreference
			android:defaultValue="true"
			android:key="pref_enable_sounds"
			android:summaryOff="@string/pref_sounds_summary_off"
			android:summaryOn="@string/pref_sounds_summary_on"
			android:title="@string/pref_sounds_title" />
		<SwitchPreference
			android:defaultValue="true"
			android:key="pref_speed_increment"
			android:summaryOff="@string/pref_speed_increment_summary_off"
			android:summaryOn="@string/pref_speed_increment_summary_on"
			android:title="@string/pref_speed_increment_title" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/pref_cat_other">
		<SwitchPreference
			android:defaultValue="true"
			android:key="pref_debug"
			android:summary="@string/pref_debug_summary"
			android:title="@string/pref_debug_title" />
	</PreferenceCategory>
</PreferenceScreen>